# hipscat-cloudtests

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  copy_data_to_fs.py  index.json  info.json  pyproject.toml  regressions.json  regressions.xml  requirements.txt
.github/workflows/: asv-nightly.yml  smoke-test.yml  testing-and-coverage.yml
_results/gh-runner/: 0d4df50d-virtualenv-py3.10-Cython-build-packaging.json  153c401e-virtualenv-py3.10-Cython-build-packaging.json  222d1eda-virtualenv-py3.10-Cython-build-packaging.json  2a35ae8f-virtualenv-py3.10-Cython-build-packaging.json  2bd031bc-virtualenv-py3.10-Cython-build-packaging.json  2f07189d-virtualenv-py3.10-Cython-build-packaging.json  366b441e-virtualenv-py3.10-Cython-build-packaging.json  41934ed6-virtualenv-py3.10-Cython-build-packaging.json  450d9461-virtualenv-py3.10-Cython-build-packaging.json  4b2e63b2-virtualenv-py3.10-Cython-build-packaging.json  4c7518b6-virtualenv-py3.10-Cython-build-packaging.json  4f81c848-virtualenv-py3.10-Cython-build-packaging.json  5378590e-virtualenv-py3.10-Cython-build-packaging.json  54394751-virtualenv-py3.10-Cython-build-packaging.json  54802148-virtualenv-py3.10-Cython-build-packaging.json  6a26a08d-virtualenv-py3.10-Cython-build-packaging.json  712947be-virtualenv-py3.10-Cython-build-packaging.json  73ac873a-virtualenv-py3.10-Cython-build-packaging.json  7bf2d94e-virtualenv-py3.10-Cython-build-packaging.json  7f5e6ca0-virtualenv-py3.10-Cython-build-packaging.json  (+19 more)
benchmarks/: asv.conf.json  benchmarks.py  copy_benchmark_data.py
tests/: conftest.py
(+106 files in other folders)
